--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
-    "react-scripts": "0.9.0"
+    "react-scripts": "0.9.0",
+    "redux-logger": "^2.8.2"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "chart.js": "2.5.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
@@ -17,8 +19,14 @@
     "react-breadcrumbs": "^1.5.2",
     "react-chartjs-2": "2.0.5",
     "react-dom": "^15.4.2",
+    "react-intl": "^2.2.3",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
-    "reactstrap": "4.2.0"
+    "reactstrap": "4.2.0",
+    "redux": "^3.6.0",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
